<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_untreated"
            android:icon="@drawable/ic_sort_black_18dp"
            android:title="@string/title_task_untreated" />
        <item
            android:id="@+id/nav_complete"
            android:icon="@drawable/ic_sort_black_18dp"
            android:title="@string/title_task_complete" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_sort_black_18dp"
            android:title="@string/title_task_all" />

    </group>

    <item android:title="Action">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_18dp"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>
